{
    "name": "controls",
    "maps": [
        {
            "name": "Main",
            "id": "0777aced-280f-4e5b-ad9a-a3489fdab6e2",
            "actions": [
                {
                    "name": "Jump",
                    "type": "Button",
                    "id": "b19a8b2e-89a4-4f32-93a6-1bc6d89ec4ea",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "MoveLR",
                    "type": "Button",
                    "id": "ccb0fdc8-6831-4660-b4e5-3e740479e1c2",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "f7eefd39-8a4e-407d-a792-0ae77152ff6f",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Jump",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "LRKeyboard",
                    "id": "649ef387-9108-475b-9857-5a7067e6b434",
                    "path": "1DAxis",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MoveLR",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "negative",
                    "id": "f5384dca-a6b5-4d1a-81a4-d3a99e4e100b",
                    "path": "<Keyboard>/leftArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MoveLR",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "positive",
                    "id": "3851b084-5f7d-4d49-a0f1-5bab13faeaae",
                    "path": "<Keyboard>/rightArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MoveLR",
                    "isComposite": false,
                    "isPartOfComposite": true
                }
            ]
        }
    ],
    "controlSchemes": []
}